--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,48 +38,48 @@
       "sizes": "512x512"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "72x72.png",
+      "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "96x96.svg",
+      "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "144x144.png",
+      "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "152x152.png",
+      "type": "image/png",
       "sizes": "152x152"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "192x192.png",
+      "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "310x310.png",
+      "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "120x120.png",
+      "type": "image/png",
       "sizes": "120x120"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "180x180.png",
+      "type": "image/png",
       "sizes": "180x180"
     },
     {
-      "src": "favicon.svg",
-      "type": "image/svg+xml",
+      "src": "maskable.png",
+      "type": "image/png",
       "sizes": "any",
       "purpose": "maskable"
     }
