--- a/public/manifest.json
+++ b/public/manifest.json
@@ -78,10 +78,10 @@
       "sizes": "180x180"
     },
     {
-      "src": "maskable.png",
+      "src": "512x512.png",
       "type": "image/png",
       "sizes": "any",
-      "purpose": "maskable"
+      "purpose":"maskable"
     }
   ],
   "start_url": "/",
