--- a/public/manifest.json
+++ b/public/manifest.json
@@ -86,6 +86,12 @@
     {
       "src": "512x512.png",
       "type": "image/png",
+      "sizes": "512x512",
+      "purpose":"maskable"
+    },
+    {
+      "src": "maskable.png",
+      "type": "image/png",
       "sizes": "any",
       "purpose":"maskable"
     }
